nginxplusbuild/apigw_statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigw
  labels:
    app: apigw
spec:
  ports:
  - port: 80
    name: apigw
  clusterIP: None
  selector:
    app: apigw
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: apigw
spec:
  selector:
    matchLabels:
      app: apigw # has to match .spec.template.metadata.labels
  serviceName: "apigw"
  replicas: 1 # for demo, i use one only
  template:
    metadata:
      labels:
        app: apigw # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: apigw
        image: biennt/nginxpluswithagent:latest
        ports:
        - containerPort: 80
          name: apigw
