nginxplusbuild/apigw_ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: apigw-ingress
  namespace: default
spec:
  rules:
    - host: ergastapi.bienlab.com
      http:
        paths:
          - backend:
              serviceName: apigw
              servicePort: 80
status:
  loadBalancer: {}
